Finish post style, except code blocks.
Remaining: code blocks.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 	<!-- Styles inline for lazy. -->
 	<div style="width: 60%; margin: 0 auto; text-align: center">
 		<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-			<img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
+			<img class="creative-commons" alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
 		</a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 	</div>
 </div>
