--- a/css/redesign.css
+++ b/css/redesign.css
@@ -128,6 +128,10 @@ header .headshot {
     letter-spacing: 0.3px;
 }
 
+strong {
+    font-weight: bold;
+}
+
 /* --- POST START --- */
 .post {
     width: 55%;
@@ -162,6 +166,18 @@ p {
     margin: 21px 0;
 }
 
+.post a {
+    font-weight: normal;
+}
+
+.post li {
+    line-height: 1.2;
+}
+
+.post li + li {
+    margin-top: 8px;
+}
+
 .post ul, .post ol {
     padding-left: 80px;
 }
@@ -171,6 +187,16 @@ p {
     max-width: 95%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.post .creative-commons {
+    display: inline; /* undo img ^ */
+}
+
+.post hr {
+    width: 50%;
+    margin-top: 42px; /* 2x p margin */
+    margin-bottom: 42px;
 }
 
 .highlighter-rouge {
