Remove substitutions in syntax highlighting; add my style.

--- a/css/redesign.css
+++ b/css/redesign.css
@@ -1,22 +1,23 @@
 /* --- SYNTAX HIGHLIGHTING --- */
 .highlight {
-  width: 100%;
-  margin-left: 0;
+    width: 100%;
+    margin: 0;
 }
 
 pre code {
-  border-radius: 10px;
-  font-family:  $code-font;
-  padding: $base-spacing;
+    padding: 10px 0 10px 20px;
+    border-radius: 10px;
+    font-family:  'Monaco', 'Menlo', monospace;
+    font-size: 18px;
 }
 
-.highlight  { background: $well-color;}//$git-black-color; }
+.highlight  { background: #E5E5E5;}
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
 .highlight .o { font-weight: bold } /* Operator */
 .highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: $sol-base1; font-weight: bold } /* Comment.Preproc */
+.highlight .cp { color: #999988; font-weight: bold } /* Comment.Preproc */
 .highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
 .highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
 .highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
