--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="content post container">
+<article class="content post container">
 	<h1 class="post-title">{{ page.title }}</h1>
 	<div class="post-date">
 		<time>{{ page.date | date: '%B %d, %Y' }}</time>
@@ -16,7 +16,7 @@ layout: default
 			<img class="creative-commons" alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
 		</a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 	</div>
-</div>
+</article>
 {% include share.html %}
 
 {% include about_footer.html %}
