--- a/css/redesign.css
+++ b/css/redesign.css
@@ -80,7 +80,7 @@ pre code {
 .highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; }
 .highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
 
-/* --- RESET --- */
+/* --- RESET / SHARED --- */
 body, h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
@@ -191,6 +191,24 @@ header .headshot {
     border: solid 3px black;
 
     align-self: center;
+}
+
+/* --- FOOTER START --- */
+footer {
+    display: flex;
+    height: 100px;
+    margin-top: 48px;
+    align-items: center;
+    justify-content: center;
+}
+
+footer > * {
+    margin: 0 60px;
+    font-size: 18px;
+}
+
+footer svg {
+    margin: 0 8px;
 }
 
 .post-list {
