--- a/css/redesign.css
+++ b/css/redesign.css
@@ -225,6 +225,12 @@ footer svg {
     margin: 0 8px;
 }
 
+.content {
+    width: 55%;
+    margin: 0 auto;
+    font-size: 21px;
+}
+
 /* --- INDEX / POST-LIST --- */
 .post-list {
     width: 65%;
@@ -243,20 +249,11 @@ footer svg {
     margin-left: 16px;
 }
 
-.content {
-    margin: 0 auto;
-}
-
 strong {
     font-weight: bold;
 }
 
 /* --- POST START --- */
-.post {
-    width: 55%;
-    font-size: 21px;
-}
-
 .post-title, .post-date {
     text-align: center;
     line-height: 1;
@@ -327,4 +324,8 @@ p {
 .highlighter-rouge {
     padding: 2px 6px;
     background: #E5E5E5;
+}
+
+.four-oh-four {
+    text-align: center;
 }
