--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta name="description" content="{{ site.description }}">
+
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | mcomella.xyz</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="icon" href="/favicon.ico" />
