Add site author and keywords.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="{{ site.description }}">
+    <meta name="keywords" content="Android, iOS, Mobile, Software, Development, Engineering, Mozilla, Firefox">
+    <meta name="author" content="Michael Comella">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | mcomella.xyz</title>
     <link rel="shortcut icon" href="/favicon.ico" />
