Use high-res favicon of gravatar.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
     <meta name="author" content="Michael Comella">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | mcomella.xyz</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/im/ico/favicon-32.png" sizes="32x32">    
+    <link rel="icon" type="image/png" href="/im/ico/favicon-128.png" sizes="128x128">    
 
     <link rel="stylesheet" href="{{ site.baseurl }}/css/redesign.css">
 </head>
