Style disqus content.

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,5 +1,5 @@
 {% if site.comments %}
-<aside id="comments" class="disqus">
+<aside id="comments" class="disqus content">
 	<div class="container">
 		<h3 class="alignable pull-left"> Comments </h3> <h3 class="alignable pull-right"> <i class="icon-disqus"></i></h3>
 		<!-- 
