--- a/_includes/css/syntax-highlighting.css
+++ b/_includes/css/syntax-highlighting.css
@@ -1,4 +1,3 @@
-/* --- SYNTAX HIGHLIGHTING --- */
 .highlight {
     width: 100%;
     margin: 0;
@@ -80,295 +79,8 @@ pre code {
 .highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; }
 .highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
 
-/* --- RESET / SHARED --- */
-.clearfix {
-    clear: both;
-}
-
-body, h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
-
-body {
-    color: #444444;
-    font-family: Helvetica, sans-serif;
-    font-weight: lighter;
-    line-height: 1.4;
-    letter-spacing: 0.3px;
-}
-
-h1 + *, h2 + *,  h3 + *,  h4 + *,  h5 + *,  h6 + * {
-    margin-top: 0;
-}
-
-a, footer img:hover {
-    font-weight: normal;
-    text-decoration: none;
-    transition: 0.2s;
-}
-
-.banner, a, a:visited, .post-title {
-    color: #D44646;
-    /* #D61E1E */
-}
-
-a:hover {
-    color: #a03535;
-}
-
-a:active {
-    color: #6d2424;
-}
-
-.post-date, .signature {
-    color: #888888;
-    font-style: italic;
-    font-weight: lighter;
-}
-
-/* --- SITE HEADER START --- */
-header {
-    display: flex;
-    height: 122px;
-    margin: 28px 0 56px 0;
-
-    background: #960909;
-
-    align-items: center;
-    justify-content: center;
-}
-
-.banner {
-    display: flex;
-    box-sizing: border-box;
-    height: 94px; /* margins are 1/2 header margins. */
-    padding: 0 0 3px 0;
-
-    background: white;
-    border-width: 8px;
-    border-style: solid;
-    border-color: #E5E5E5;
-    border-radius: 4px;
-
-    font-family: Helvetica, sans-serif;
-    font-size: 36px;
-    line-height: 1;
-
-    align-items: flex-end;
-    justify-content: space-between;
-}
-
-#banner-left, #banner-right {
-    position: relative;
-    width: 108px;
-    transform: skew(-45deg);
-    border-left-width: 10px;
-    border-right-width: 10px;
-}
-
-#banner-left {
-    left: 55px;
-}
-
-#banner-right {
-    right: 55px;
-}
-
-#banner-center {
-    width: 64%;
-
-    z-index: 1;
-    border-left: 0;
-    border-right: 0;
-}
-
-#banner-center > *:first-child {
-    position: relative;
-    left: -25px;
-}
-
-#banner-center > *:last-child {
-    margin-right: 24px;
-}
-
-nav > span {
-    margin-left: 22px;
-    margin-right: 8px;
-}
-
-header .headshot {
-    position: relative;
-    height: 144px;
-    width: 144px;
-    top: 48px;
-
-    border-radius: 50%;
-    border: solid 3px black;
-
-    align-self: center;
-}
-
-@media screen and (max-width: 1060px) {
-    header .headshot {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 560px) {
-    #banner-left, #banner-right {
-        display: none;
-    }
-
-    #banner-center {
-        width: 100%;
-        flex-direction: column;
-    }
-
-    #banner-center > *:first-child {
-        position: static;
-        align-self: flex-start;
-        margin: 0px 8px;
-    }
-
-    #banner-center > *:last-child {
-        margin: 8px 8px;
-    }
-
-    nav > span {
-        margin-left: 4px;
-    }
-}
-
-/* --- FOOTER START --- */
-footer {
-    display: flex;
-    height: 100px;
-    margin-top: 48px;
-    align-items: center;
-    justify-content: center;
-}
-
-footer > * {
-    margin: 0 60px;
-    font-size: 18px;
-}
-
-footer svg, footer img {
-    height: 32px;
-    margin: 0 8px;
-}
-
-footer img:hover {
-    filter: brightness(85%);
-}
-
-.content {
-    max-width: 1040px;
-    width: 95%;
-    margin: 0 auto;
-    font-size: 21px;
-}
-
-/* --- INDEX / POST-LIST --- */
-.post-list {
-    width: 65%;
-    font-size: 24px;
-}
-
-.post-heading {
-    font-size: 36px;
-}
-
-.post-list ul {
-    margin-left: 16px;
-}
-
-.post-list .post-date {
-    margin-left: 16px;
-}
-
-strong {
-    font-weight: bold;
-}
-
-/* --- POST START --- */
-.post-title, .post-date {
-    text-align: center;
-    line-height: 1;
-    margin-bottom: 6px;
-}
-
-.post-title {
-    font-size: 38px;
-}
-
-.post h2 {
-    margin-top: 52.5px; /* p margin 2.5x */
-    color: #111111;
-}
-
-.post h3, .post h4, .post h5, .post h6 {
-    margin-top: 31.5px; /* p margin 1.5x */
-    color: #555555;
-}
-
-p {
-    margin: 21px 0;
-}
-
-.post li {
-    line-height: 1.2;
-}
-
-.post li + li {
-    margin-top: 8px;
-}
-
-.post ul, .post ol {
-    padding-left: 80px;
-}
-
-.post img {
-    display: block;
-    max-width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.signature, .license {
-    text-align: center;
-}
-
-.license {
-    width: 45%;
-    float: left;
-}
-
-.signature {
-    width: 45%;
-    float: right;
-}
-
-.post .creative-commons {
-    margin-top: 8px;
-}
-
-.post hr {
-    width: 50%;
-    margin-top: 42px; /* 2x p margin */
-    margin-bottom: 42px;
-}
-
+/* CODE I ADDED */
 .highlighter-rouge {
     padding: 2px 6px;
     background: #E5E5E5;
-}
-
-/* --- 404 --- */
-.four-oh-four {
-    text-align: center;
-}
-
-.disqus {
-    margin-top: 28px;
 }
