--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<article class="content post container">
-    <h1 class="post-title">{{ page.title }}</h1>
+<article class="content post">
+    <h1>{{ page.title }}</h1>
     <div class="post-date">
         <time>{{ page.date | date: '%B %d, %Y' }}</time>
     </div>
