Update url references to mcomella.com.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Android, iOS, Mobile, Software, Development, Engineering, Mozilla, Firefox">
     <meta name="author" content="Michael Comella">
 
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | mcomella.xyz</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | mcomella.com</title>
     <link rel="icon" type="image/png" href="/im/ico/favicon-32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/im/ico/favicon-128.png" sizes="128x128">
 
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <div id="header-left"><a href="/">mcomella.xyz</a></div>
+        <div id="header-left"><a href="/">mcomella.com</a></div>
         <div id="header-spacer"></div>
         <div id="header-right"><a href="/">Posts</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a></div>
     </header>
