--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
         {% if page.license %}
         {{page.license}}
         {% else %}
-        This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+        This work is licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
         <br>
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
             <img class="creative-commons" alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
