--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,13 +14,14 @@ layout: default
 
     <div class="license">
         {% if page.license %}
-        {{page.license}}
+        {{ page.license }}
         {% else %}
-        This work is licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
-        <br>
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-            <img class="creative-commons" alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
-        </a>
+        <p xmlns:cc="http://creativecommons.org/ns#">
+            <a href="{{ page.url }}">{{ page.title }}</a>
+            &copy; 2024
+            by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://mcomella.com">Michael Comella</a>
+            is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">Creative Commons Attribution-ShareAlike 4.0 International<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt=""></a>
+        </p>
         {% endif %}
     </div>
     <div class="clearfix"></div>
