--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,14 @@
 layout:
 ---
 
-/* Replace default margin with padding so gradient hits the edges of the screen. */
-body { margin: 0px; }
-body > * { padding: 8px; }
+body {
+    margin: 0px;
+}
+
+body > * {
+    /* when the browser window shrinks to hug the content, retain some padding. */
+    padding: 0 8px 0 8px;
+}
 
 {% include css/syntax-highlighting.css %}
 
@@ -49,10 +54,11 @@ a:active {
 header {
     display: flex;
     justify-content: center;
-    padding-top: 56px;
-    margin-bottom: 56px;
+    padding-top: 40px;
+    margin-bottom: 68px;
+    border-bottom: 1px solid #eee;
 
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 100%), #F0F0F0;
+    background: #fafafa;
 
     font-family: var(--font-header);
     font-size: 32px;
