change header to full name.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <div id="header-left"><a href="/">mcomella.com</a></div>
+        <div id="header-left"><a href="/">Michael Comella</a></div>
         <div id="header-spacer"></div>
         <div id="header-right"><a href="/">Posts</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a></div>
     </header>
