update about page with project list.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,5 +2,55 @@
 layout: default
 ---
 <div class="content post about-container">
-	{{ content }}
+    <p>
+        Hey there! I'm Mike, a software developer. I believe in putting the user first &ndash; that software should be fast, easy-to-use, reliable, and safe. As developers, our greatest asset to that end is simplicity. My core expertise is in Android development and performance optimization which have been honed through my most recent employment by <a href="https://www.mozilla.org/"">Mozilla</a>.
+    </p>
+    <p>
+        If you'd like to see what I'm up to, check out my <a href="/">my technical blog</a> and the project list below.
+    </p>
+
+    <section class="projects">
+        <h1>Projects</h1>
+        <h2>Professional</h2>
+        <ul>
+            <li>
+                <span class="project-title"><a href="https://www.mozilla.org/firefox/android/">Firefox for Android</a></span> <span class="project-date">(2013-2022)</span>: I've worked on five Firefox products across four Android form factors while employed by <a href="https://www.mozilla.org/"">Mozilla</a>. I led Firefox for Android's performance team where we boosted start-up performance to exceed Google Chrome's and matched page load performance. I was also the tech lead on the <a href="https://blog.mozilla.org/en/products/firefox/get-firefox-amazon-fire-tv-now-turbo-mode/">Firefox for Fire TV</a> and Firefox for Echo Show projects, bringing them from 0-to-1 on novel form factors.
+            </li>
+            <li>
+                <span class="project-title"><a href="https://addons.mozilla.org/en-US/firefox/addon/apt-github-improvements/">APT GitHub Improvements</a></span> <span class="project-date">(2018-2019)</span>: I ideated and built a Firefox extension to improve my team's productivity on GitHub. The major features are linking issues to pull requests throughout GitHub, fetching titles and other metadata for links to bugs on Bugzilla, and adding a story points calculator for sprint planning.
+            </li>
+            <li>
+                <span class="project-title">New Mobile Experience (NMX)</span> <span class="project-date">(2016-2017)</span>: I participated in a series of experiments at Mozilla to develop new mobile apps beyond Firefox. I participated in brainstorming, <a href="https://sprintstories.com/exploring-new-mobile-frontiers-with-design-sprints-fc428f989e88">Design Sprints</a>, prototyping, and user research to find product-market fit. We internally released <a href="https://medium.com/firefox-ux/project-prox-4e4c4e155592">a prototype codenamed Prox</a> before returning to work on Firefox. Throughout the process, I developed the iOS clients using Swift and researched technical feasibility.
+            </li>
+        </ul>
+
+        <h2>Personal</h2>
+        <ul>
+            <li>
+                <span class="project-title"><a href="http://localhost:4000/blog/2021/w3d-renderer.html">W3D Renderer</a></span> <span class="project-date">(2016-2017)</span>: inspired after reading <a href="https://fabiensanglard.net/gebbwolf3d/">Fabien Sanglard's <span class="book-title">Game Engine Black Book: Wolfenstein 3D</span></a>, I reimplemented the core functionality of the renderer for the 1992 game, <a href="https://en.wikipedia.org/wiki/Wolfenstein_3D">Wolfenstein 3D</a>, for fun using the browser's HTML Canvas API.
+            </li>
+        </ul>
+        <p>
+            I've also written a few micro utilities that I use regularly: maybe you'll find them useful too.
+        </p>
+        <ul>
+            <li>
+                <span class="project-title"><a href="/app/remind.html">Remind Me</a></span>: speaks your chosen phrase once during your provided interval and begins again. Correct your posture or take a breath: it's up to you.
+            </li>
+            <li>
+                <span class="project-title"><a href="/app/five_minute_warning.html">Five Minute Warning</a></span>: a timer that announces "five minutes remaining" before it ends. It helps me more cleanly wrap up my activities than a standard timer.
+            </li>
+            <li>
+                <span class="project-title"><a href="/app/countup.html">Countup Timer</a></span>: a timer that counts and announces each minute that has passed. It helps me keep track of how long I've spent doing an activity when my intuitive clock is focused elsewhere.
+            </li>
+        </ul>
+    </section>
+
+    <hr>
+    <section>
+        <h1>Website Acknowledgements</h1>
+        <p>
+            The GitHub <a href="https://github.com/danklammer/bytesize-icons">bytesize icon by Dan Klammer</a> is licensed under <a href="https://github.com/danklammer/bytesize-icons/blob/master/LICENSE.md">the MIT license</a>.
+        </p>
+    </section>
 </div>
