use nav element around navigation.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <header>
         <div id="header-left"><a href="/">Michael Comella</a></div>
         <div id="header-spacer"></div>
-        <div id="header-right"><a href="/">Posts</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a></div>
+        <nav id="header-right"><a href="/">Posts</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a></nav>
     </header>
 
     {{ content }}
