--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,6 @@
 <footer>
     <div>
-        <p>{{ site.title }} &copy; <script language="JavaScript" type="text/javascript">
-            now = new Date
-            theYear=now.getYear()
-            if (theYear < 1900)
-            theYear=theYear+1900
-            document.write(theYear)
-        </script></p>
+        <p>{{ site.title }} &copy; {{ 'now' | date: '%Y' }}</p>
     </div>
 
     <div>
