--- a/css/main.css
+++ b/css/main.css
@@ -2,35 +2,37 @@
 layout:
 ---
 
+:root {
+    --content-width: 720px;
+
+    --color-text: #606060;
+    --color-red: #AF5454;
+    --color-light-grey: #C0BFBF;
+    --color-grey: #7A7A7A;
+
+    --font-header: 'Voltaire', sans-serif;
+
+    /* humanist font via https://modernfontstacks.com/ */
+    font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
+    font-size: 16pt;
+    color: var(--color-text);
+}
+
 body {
     margin: 0px;
 }
 
 body > * {
     /* when the browser window shrinks to hug the content, retain some padding. */
-    padding: 0 8px 0 8px;
+    padding: 0 8px;
 }
 
-{% include css/syntax-highlighting.css %}
-
-pre code {
-    font-size: 14px; /* override too large font */
+p, li {
+    line-height: 1.618rem;
 }
 
-.highlight pre code {
-    padding: 5px; /* override too large padding */
-}
-
-:root {
-    --content-width: 690px;
-
-    --color-red: #AF5454;
-    --color-light-grey: #C0BFBF;
-    --color-grey: #7A7A7A;
-    --color-text: #5E5E5E;
-
-    --font-header: 'Voltaire', sans-serif;
-    --font-content: 'Open Sans', sans-serif;
+ul li::marker {
+    color: var(--color-grey);
 }
 
 a {
@@ -54,7 +56,7 @@ a:active {
 header {
     display: flex;
     justify-content: center;
-    padding-top: 40px;
+    padding: 40px 32px 0 32px;
     margin-bottom: 68px;
     border-bottom: 1px solid #eee;
 
@@ -62,6 +64,7 @@ header {
 
     font-family: var(--font-header);
     font-size: 32px;
+    line-height: 1.3; /* TODO: it'd be better to do this with margin? */
 }
 
 @media (max-width: 410px) {
@@ -93,8 +96,9 @@ header a:active {
 }
 
 #header-spacer {
-    /* todo: max-width? */
-    width: var(--content-width);
+    flex-grow: 1;
+    max-width: var(--content-width);
+    min-width: 32px;
 }
 
 footer {
@@ -123,12 +127,6 @@ footer img:hover {
     clear: both; /* TODO: needed? */
 }
 
-body {
-    color: var(--color-text);
-    font-family: var(--font-content);
-    font-size: 20px; /* TODO: smaller? */
-}
-
 .content {
     /* TODO: width or max-width? */
     max-width: var(--content-width);
@@ -145,19 +143,12 @@ h1, h2, h3, h4, h5, h6 {
     margin: 36px 0 6px 0;
 }
 
-p {
-    margin: 24px 0;
-    line-height: 155%;
-}
-
-.highlighter-rouge { /* override */
-    background: #F0F0F0;
-}
-
+/* TODO: would prefer to set to same as post list? */
 .content li + li {
     margin-top: 8px;
 }
 
+/* TODO: is this really necessary? */
 .content ul, .content ol {
     padding-left: 46px;
 }
@@ -180,16 +171,13 @@ h1 + *, h2 + *, h3 + *, h4 + *, h5 + *, h6 + * {
     margin: 0; /* reset margins to let headers define the margins. */
 }
 
-.four-oh-four {
-    text-align: center;
-}
-
 footer img:hover {
     font-weight: normal;
     text-decoration: none;
     transition: 0.2s;
 }
 
+/* --- POST PAGE --- */
 .post-date {
     font-size: 18px;
     font-weight: 300;
@@ -217,30 +205,39 @@ footer img:hover {
     margin-top: 8px; /* visually match line spacing. */
 }
 
-.post-list ul {
-    padding-left: 20px; /* align bullet to left margin. */
-
-    /* ideally we'd set all bullets to this color but it'd change the text;
-     * this works because there are spans that override the colors. */
-    color: var(--color-grey);
-}
-
-.post-list .post-date {
-    margin-left: 16px;
-}
-
 .book-title {
     text-decoration: underline;
 }
 
-/* --- ABOUT PAGE --- */
-.projects li {
-    margin-bottom: 24px;
-    line-height: 140%;
+/* --- CODE & SYNTAX HIGHLIGHTING --- */
+{% include css/syntax-highlighting.css %}
+
+pre code {
+    font-size: 0.675rem; /* override too large font */
 }
 
-.projects li:last-child {
-    margin-bottom: 0;
+.highlight pre code {
+    padding: 5px; /* override too large padding */
+}
+
+/* --- POST LIST PAGE --- */
+.post-list ul {
+    padding-left: 0;
+    list-style-type: none;
+}
+
+.post-list li {
+    line-height: 1.2;
+    margin-bottom: 16px;
+}
+
+.post-list li > * {
+    display: block;
+}
+
+/* --- ABOUT PAGE --- */
+.projects li {
+    margin-bottom: 24px; /* add extra margin to projects list */
 }
 
 .projects .project-title, .projects .project-title a {
@@ -248,5 +245,11 @@ footer img:hover {
 }
 
 .projects .project-date {
-    filter: brightness(120%);
+    font-weight: 300;
+    color: var(--color-grey);
+}
+
+/* --- 404 PAGE --- */
+.four-oh-four {
+    text-align: center;
 }
