--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,9 @@ layout:
     --color-code-bg: #E5E5E5;
     --color-code-text: #404040;
 
-    --font-header: 'Voltaire', sans-serif;
-
     /* humanist font via https://modernfontstacks.com/ */
     font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
+
     font-size: 16pt;
     color: var(--color-text);
 }
@@ -83,7 +82,8 @@ header {
 
     background: #fafafa;
 
-    font-family: var(--font-header);
+    /* Classical humanist font via https://modernfontstacks.com */
+    font-family: Optima, Candara, 'Noto Sans', source-sans-pro, sans-serif;;
     font-size: 32px;
     line-height: 1.3; /* TODO: it'd be better to do this with margin? */
 }
@@ -96,7 +96,7 @@ header {
 }
 
 header, header a, header a:visited {
-    color: var(--color-light-grey);
+    color: #aaa;
 }
 
 header a:hover {
