update responsive styling for footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div>
-        <p>{{ site.title }} &copy; {{ 'now' | date: '%Y' }}</p>
+        {{ site.title }} &copy; {{ 'now' | date: '%Y' }}
     </div>
 
     <div>
