add <main> element.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="content post about-container">
+<main class="content post about-container">
     <p>
         Hey there! I'm Mike, a software developer. I believe in putting the user first &ndash; that software should be fast, easy-to-use, reliable, and safe. As developers, our greatest asset to that end is simplicity. My core expertise is in Android development and performance optimization which have been honed through my most recent employment by <a href="https://www.mozilla.org/"">Mozilla</a>.
     </p>
@@ -53,4 +53,4 @@ layout: default
             The GitHub <a href="https://github.com/danklammer/bytesize-icons">bytesize icon by Dan Klammer</a> is licensed under <a href="https://github.com/danklammer/bytesize-icons/blob/master/LICENSE.md">the MIT license</a>.
         </p>
     </section>
-</div>
+</main>
