--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<main>
 <article class="content post">
     <h1>{{ page.title }}</h1>
     <div class="post-date">
@@ -26,3 +27,4 @@ layout: default
     </div>
 
 </article>
+</main>
