correct invalid markup.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <main class="content post about-container">
     <p>
-        Hey there! I'm Mike, a software developer. I believe in putting the user first &ndash; that software should be fast, easy-to-use, reliable, and safe. As developers, our greatest asset to that end is simplicity. My core expertise is in Android development and performance optimization which have been honed through my most recent employment by <a href="https://www.mozilla.org/"">Mozilla</a>.
+        Hey there! I'm Mike, a software developer. I believe in putting the user first &ndash; that software should be fast, easy-to-use, reliable, and safe. As developers, our greatest asset to that end is simplicity. My core expertise is in Android development and performance optimization which have been honed through my most recent employment by <a href="https://www.mozilla.org/">Mozilla</a>.
     </p>
     <p>
         If you'd like to see what I'm up to, check out my <a href="/">my technical blog</a> and the project list below.
@@ -14,7 +14,7 @@ layout: default
         <h3>Professional</h3>
         <ul>
             <li>
-                <span class="project-title"><a href="https://www.mozilla.org/firefox/android/">Firefox for Android</a></span> <span class="project-date">(2013-2022)</span>: I've worked on five Firefox products across four Android form factors while employed by <a href="https://www.mozilla.org/"">Mozilla</a>. I led Firefox for Android's performance team where we boosted start-up performance to exceed Google Chrome's and matched page load performance. I was also the tech lead on the <a href="https://blog.mozilla.org/en/products/firefox/get-firefox-amazon-fire-tv-now-turbo-mode/">Firefox for Fire TV</a> and Firefox for Echo Show projects, bringing them from 0-to-1 on novel form factors.
+                <span class="project-title"><a href="https://www.mozilla.org/firefox/android/">Firefox for Android</a></span> <span class="project-date">(2013-2022)</span>: I've worked on five Firefox products across four Android form factors while employed by <a href="https://www.mozilla.org/">Mozilla</a>. I led Firefox for Android's performance team where we boosted start-up performance to exceed Google Chrome's and matched page load performance. I was also the tech lead on the <a href="https://blog.mozilla.org/en/products/firefox/get-firefox-amazon-fire-tv-now-turbo-mode/">Firefox for Fire TV</a> and Firefox for Echo Show projects, bringing them from 0-to-1 on novel form factors.
             </li>
             <li>
                 <span class="project-title"><a href="https://addons.mozilla.org/en-US/firefox/addon/apt-github-improvements/">APT GitHub Improvements</a></span> <span class="project-date">(2018-2019)</span>: I ideated and built a Firefox extension to improve my team's productivity on GitHub. The major features are linking issues to pull requests throughout GitHub, fetching titles and other metadata for links to bugs on Bugzilla, and adding a story points calculator for sprint planning.
