--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="content post">
     <h1>{{ page.title }}</h1>
     <div class="post-date">
-        <time>{{ page.date | date: '%B %d, %Y' }}</time>
+        <time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%B %d, %Y' }}</time>
     </div>
     {{ content }}
 
