--- a/css/main.css
+++ b/css/main.css
@@ -177,32 +177,6 @@ footer img:hover {
     transition: filter 0.2s;
 }
 
-/* --- RESPONSIVE DESIGN ---
-    This max-width addresses larger phones https://stackoverflow.com/a/10027160/ */
-@media (max-width: 600px) {
-    :root {
-        font-size: 14pt;
-    }
-
-    header {
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 0;
-        padding-top: 12px;
-        padding-bottom: 2px;
-    }
-
-    #header-right {
-        font-size: 85%;
-    }
-
-    footer {
-        flex-direction: column;
-        margin: 24px 0 18px 0;
-        gap: 12px;
-    }
-}
-
 /* --- POST PAGE --- */
 .post-date {
     font-size: 18px;
@@ -284,4 +258,35 @@ pre code {
 /* --- 404 PAGE --- */
 .four-oh-four {
     text-align: center;
+}
+
+/* --- RESPONSIVE DESIGN ---
+    This max-width addresses larger phones https://stackoverflow.com/a/10027160/ */
+@media (max-width: 600px) {
+    :root {
+        font-size: 14pt;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 0;
+        padding-top: 12px;
+        padding-bottom: 2px;
+    }
+
+    #header-right {
+        font-size: 85%;
+    }
+
+    footer {
+        flex-direction: column;
+        margin: 24px 0 18px 0;
+        gap: 12px;
+    }
+
+    .content > h1:first-child {
+        /* TODO: this is insufficient for landscape mode. */
+        margin-top: 1.31rem; /* set page title spacing to the same as <p> spacing. */
+    }
 }
